<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Excluir_record" >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/retro"
        android:importantForAccessibility="no" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3ba0e2" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/icone_excluir_dados" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <LinearLayout
            android:id="@+id/layoutCorFundo"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#b0b5b3"
            android:gravity="center" >
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Exluir_record"
                android:fontFamily="@font/dogicapixelbold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#E0C432" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:fontFamily="@font/dogicapixelbold"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#E0C432"
        android:textSize="18sp"
        tools:text="@string/Digitar_nome" />

    <TextView
        android:id="@+id/txtnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:fontFamily="@font/dogica"
        android:text="@string/Digitar_nome"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#777a79"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:fontFamily="@font/dogicapixelbold"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#E0C432"
        android:textSize="18sp"
        tools:text="@string/Digitar_record" />

    <TextView
        android:id="@+id/txtRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:fontFamily="@font/dogica"
        android:text="@string/Digitar_record"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#777a79"
        android:textSize="18sp"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="0dp" >

        <ImageView
            android:id="@+id/imgprimeiro"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/todo"
            android:src="@drawable/botao_del_primeiro" />

        <ImageView
            android:id="@+id/imganterior"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/todo"
            android:src="@drawable/botao_del_anterior" />
        <ImageView
            android:id="@+id/imgproximo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/todo"
            android:src="@drawable/botao_del_proximo" />
        <ImageView
            android:id="@+id/imgultimo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/todo"
            android:src="@drawable/botao_del_ultimo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="0dp" >

        <TextView
            android:id="@+id/txtstatus_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dogicapixelbold"
            android:textColor="#E0C432"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="@string/status" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btexcluirdados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dogicapixel"
            android:text="@string/excluir_dados" />

    </LinearLayout>
    </LinearLayout>
</RelativeLayout>