<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3B6BE3" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10pt"
            android:padding="15px"
            android:fontFamily="@font/dogicapixel"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:ignore="PxUsage" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3ba0e2" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="688dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/retro"
            android:importantForAccessibility="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/ranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dogicapixelbold"
                android:layout_gravity="center"
                android:textColor="#E0C432"
                android:textSize="50dp"
                android:text="@string/ranking" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/posição_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/posição_1" />
                <TextView
                    android:id="@+id/nome_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/nome"
                    tools:ignore="ObsoleteLayoutParam,PxUsage,RtlSymmetry" />

                    <TextView
                    android:id="@+id/record_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:text="@string/record" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/posição_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/posição_2" />
                <TextView
                    android:id="@+id/nome_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/nome" />

                <TextView
                    android:id="@+id/record_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:text="@string/record" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/posição_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/posição_3" />
                <TextView
                    android:id="@+id/nome_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/nome" />

                <TextView
                    android:id="@+id/record_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:text="@string/record" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/posição_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/posição_4" />
                <TextView
                    android:id="@+id/nome_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/nome" />

                <TextView
                    android:id="@+id/record_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:text="@string/record" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/posição_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/posição_5" />
                <TextView
                    android:id="@+id/nome_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/nome" />

                <TextView
                    android:id="@+id/record_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:text="@string/record"
                    tools:ignore="ObsoleteLayoutParam" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/posição_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/posição_6" />
                <TextView
                    android:id="@+id/nome_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/nome" />

                <TextView
                    android:id="@+id/record_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:text="@string/record" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/dogicapixel"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/posição_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/posição_7" />
                <TextView
                    android:id="@+id/nome_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/nome" />

                <TextView
                    android:id="@+id/record_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:text="@string/record" />
            </LinearLayout>
            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/posição_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/posição_8" />
                <TextView
                    android:id="@+id/nome_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:paddingRight="30px"
                    android:text="@string/nome" />

                <TextView
                    android:id="@+id/record_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dogicapixel"
                    android:textSize="25dp"
                    android:textColor="#E0C432"
                    android:layout_alignParentTop="true"
                    android:text="@string/record" />
            </LinearLayout>
                   <Button
                       android:id="@+id/bt_excluir"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/dogicapixel"
                       android:text="@string/Exluir_record"/>
                   <Button
                       android:id="@+id/bt_alterar"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/dogicapixel"
                       android:text="@string/Alterar_nome"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>